import { Column, Entity, JoinColumn, ManyToOne, PrimaryGeneratedColumn } from 'typeorm';
import { Usuario } from '../../seguridad/entidades/usuario.entidad';

@Entity('estudiante')
export class Estudiante {
  @PrimaryGeneratedColumn()
  id: number;

  @ManyToOne(() => Usuario, { eager: true, onDelete: 'RESTRICT' })
  @JoinColumn({ name: 'usuario_id' })
  usuario: Usuario;

  @Column({ type: 'int', name: 'grupo_id', nullable: true })
  grupoId: number | null;

  @Column({ type: 'int', name: 'horario_id', nullable: true })
  horarioId: number | null;
}
